# demo

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json
functions/save-post/: Cargo.toml
functions/save-post/src/: app.rs  handler.rs  main.rs  service.rs
migrations/: 20221029051638_create_posts_table.up.sql  20221029051703_create_tags_table.down.sql  20221029051703_create_tags_table.up.sql
stack/lib/: lambdaStack.ts
ytakada-dev-adapter/: Cargo.toml
ytakada-dev-adapter/src/persistence/: post.rs
ytakada-dev-core/: Cargo.toml
ytakada-dev-core/src/: lib.rs  post.rs
ytakada-dev-driver/: Cargo.toml
ytakada-dev-driver/src/: lib.rs
