[package]
name = "save-post"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
lambda_http = "0.7.0"
serde_json = "1.0.86"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql" ] }
tokio = { version = "1.21.2", features = ["full"] }
ytakada-dev-adapter = { path = "../../ytakada-dev-adapter", version = "0.1.0" }
ytakada-dev-core = { path = "../../ytakada-dev-core", version = "0.1.0" }
